--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,76 @@
----
-layout: default
----
+<!doctype html>
+<html lang="{{ site.lang | default: "en-US" }}">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-{{ content }}
-
-<!-- Add Mermaid support -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/9.3.0/mermaid.min.js"></script>
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    mermaid.initialize({
-      startOnLoad: true,
-      theme: 'dark',  // Using dark theme to match Midnight theme
-      securityLevel: 'loose',
-      themeVariables: {
-        fontFamily: 'monaco, Consolas, Lucida Console, monospace'
+{% seo %}
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/9.3.0/mermaid.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <style>
+      .mermaid {
+        background: #252525;
+        padding: 10px;
+        margin: 10px 0;
+        border-radius: 5px;
       }
-    });
-  });
-</script>
-<style>
-  .mermaid {
-    background: #252525;
-    padding: 10px;
-    margin: 10px 0;
-    border-radius: 5px;
-  }
-</style>
+    </style>
+  </head>
+
+  <body>
+    <div id="header">
+      <nav>
+        <ul>
+          <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
+          {% if site.show_downloads %}
+            <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
+            <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
+            <li class="title">DOWNLOADS</li>
+          {% endif %}
+        </ul>
+      </nav>
+    </div>
+
+    <div class="wrapper">
+      <section>
+        <div id="title">
+          <h1>{{ site.title | default: site.github.repository_name }}</h1>
+          <p>{{ site.description | default: site.github.project_tagline }}</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
+        </div>
+
+        {{ content }}
+
+      </section>
+    </div>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        mermaid.initialize({
+          startOnLoad: true,
+          theme: 'dark',
+          securityLevel: 'loose',
+          themeVariables: {
+            fontFamily: 'monaco, Consolas, Lucida Console, monospace',
+            darkMode: true,
+            background: '#252525',
+            primaryColor: '#fff',
+            primaryTextColor: '#fff',
+            primaryBorderColor: '#fff',
+            lineColor: '#fff',
+            secondaryColor: '#666',
+            tertiaryColor: '#fff'
+          }
+        });
+      });
+    </script>
+  </body>
+</html>
