--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,13 @@
         margin: 10px 0;
         border-radius: 5px;
       }
+      /* Add these new rules */
+      .wrapper {
+        padding-left: 30px;
+      }
+      section {
+        margin-left: 20px;
+      }
     </style>
   </head>
   <body>
